test/deca/context/invalid/2_9_param_sans_type.deca
// Description:
//    parametres sans type
//
// Resultats:
//    Ligne

class A {
   void truc(a, b)  {
   
   }
}
